MantaFlow: Incorrect bake position for fluids #71583

Closed
opened 2019-11-14 19:26:30 +01:00 by Léo Depoix · 4 comments

System Information
Operating system: Windows 10 (1903)
Graphics card: Nvidia GTX 1080 (Latest drivers)

Blender Version
Broken: version: 2.82 (sub 1), branch: fluid-mantaflow, commit date: 2019-11-08 11:47, hash: 9b098e340bee
Worked: I don't know

Short description of error
Mantaflow make the sim with an incorrect domain position offset if center of the domain was changed previously.

Exact steps for others to reproduce the error
Open the attached file, check if "Show FLIP" is enable and then press the "Bake Data" button.

or:

  1. Open Blender (Latest mantaflow build)
  2. Move the default cube on the grid, set the origin on 3d cursor
  3. Make it domain (for fluid).
  4. Add objects as fluids flow (Liquid based on geometry)
  5. Bake the domain data and enable "show FLIP"
**System Information** Operating system: Windows 10 (1903) Graphics card: Nvidia GTX 1080 (Latest drivers) **Blender Version** Broken: version: 2.82 (sub 1), branch: fluid-mantaflow, commit date: 2019-11-08 11:47, hash: 9b098e340bee Worked: I don't know **Short description of error** Mantaflow make the sim with an incorrect domain position offset if center of the domain was changed previously. **Exact steps for others to reproduce the error** Open the attached file, check if "Show FLIP" is enable and then press the "Bake Data" button. or: 1) Open Blender (Latest mantaflow build) 2) Move the default cube on the grid, set the origin on 3d cursor 3) Make it domain (for fluid). 4) Add objects as fluids flow (Liquid based on geometry) 5) Bake the domain data and enable "show FLIP"
Author

Added subscriber: @PiloeGAO

Added subscriber: @PiloeGAO
Sebastián Barschkis was assigned by Bastien Montagne 2019-11-18 11:20:41 +01:00

Hi! Thanks for reporting. Yes, I've been able to reproduce this issue. Looking into this now.

Hi! Thanks for reporting. Yes, I've been able to reproduce this issue. Looking into this now.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Okay, just pushed a fix for this (b0f221bda10b). If there are still issues with it, please let me know!

Okay, just pushed a fix for this (b0f221bda10b). If there are still issues with it, please let me know!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71583
No description provided.