Fix T71583: Liquid domains with missing origin offset